ACLOCAL_AMFLAGS = -I m4

SUBDIRS= src include tests cmake

EXTRA_DIST = CMakeLists.txt          \
	     README.md               \
	     examples/ex1.c          \
	     examples/ex1_cad.cc     \
	     examples/ex2.c          \
	     examples/ex2_cad.cc     \
	     examples/ex3.cc         \
	     examples/ex3_cad.cc     \
	     examples/ex4.c          \
	     examples/ex4_cad.cc     \
	     examples/ex5.c          \
	     examples/ex5_cad.cc     \
	     examples/ex5_cad_opt.cc \
	     examples/ex6.c          \
	     examples/ex6_cad.cc     \
	     examples/ex7.cc         \
	     examples/ex7_cad.cc     \
	     doc/ug_cadna.pdf        \
	     doc/ref_cadna.pdf       \
	     bootstrap.sh            \
	     clean.sh
