nobase_include_HEADERS = cadna.h                       \
			 cadna/macros.hxx              \
			 cadna/global.hxx              \
			 cadna/numeric_type.hxx        \
			 cadna/numeric_type.ixx        \
			 cadna/cmath.hxx               \
			 cadna/cmath.ixx               \
			 cadna/numeric_limits.hxx      \
			 cadna/random.hxx              \
			 cadna/random.ixx              \
			 cadna/to_string.hxx           \
			 cadna/instability.hxx         \
			 cadna/instability_handler.hxx \
			 cadna/rounding.hxx            \
			 cadna/logstream.hxx

EXTRA_DIST = CMakeLists.txt
