EXTRA_DIST = cadna.cmake                   \
	     autotools.cmake               \
	     clang.cmake                   \
	     common-compiler-flags.cmake   \
	     compiler.cmake                \
	     gcc.cmake                     \
	     intel.cmake                   \
             msvc.cmake                    \
	     OptimizeForArchitecture.cmake \
	     CodeCoverage.cmake
